--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<form action="#">
 			<h1>Login J&A Suporte</h1>
 			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+				<!-- <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a> -->
 			</div>
 			<span>E-mail Fontes</span>
 			<input type="email" id="email" placeholder="Email" />
@@ -29,7 +29,7 @@
 		<div class="overlay">
 			<div class="overlay-panel overlay-right">
 				<img src="/img/jea.png" alt="" class="mordor">
-				<h1>Olá, bem vindo a Mordor!</h1>
+				<h1>Olá, bem vindo ao nosso Dashboard!</h1>
 				<p>Introduza os seus dados Fontes e tenha acesso à nosso Dashboard!!</p>
 			</div>
 		</div>
