--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="main">
-<img src="/login/img/fred.png" class="fredLogin">
+<img src="/img/fred.png" class="fredLogin">
 <div class="container" id="container">
 	<div class="form-container sign-in-container">
 		<form action="#">
@@ -30,7 +30,7 @@
 	<div class="overlay-container">
 		<div class="overlay">
 			<div class="overlay-panel overlay-right">
-				<img src="/login//img/jea.png" alt="" class="mordor">
+				<img src="/img/jea.png" alt="" class="mordor">
 				<h1>Olá, bem vindo ao nosso Dashboard!</h1>
 				<p>Introduza os seus dados Fontes e tenha acesso à nosso Dashboard!!</p>
 			</div>
